--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@alpinejs/focus": "^3.13.7",
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.10",
+        "alpinejs": "^3.13.7",
+        "autoprefixer": "^10.4.18",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
         "vite": "^3.0.0"
     }
 }
